--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-          <span class="image avatar"><img src="Aztek%20Dragon.jpg" alt="" /></span>
+          <span class="image avatar"><img src="Aztek Dragon.jpg" alt="" /></span>
           <h1 id="logo"><a href="#">Madeleine McQuilling</a></h1>
 					<p></p>
 				</header>
