--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-          <span class="image avatar"><img src="Aztek Dragon.jpg" alt="" /></span>
+          <span class="image avatar"><img src="images/Aztek Dragon.jpg" alt="hi" class="inline"/>
+					
           <h1 id="logo"><a href="#">Madeleine McQuilling</a></h1>
 					<p></p>
 				</header>
